--- a/.prettierignore
+++ b/.prettierignore
@@ -1,9 +1,8 @@
-# See http://help.github.com/ignore-files/ for more about ignoring files.
+build
+coverage
+e2e
+node_modules
 
-/build
-/coverage
-/e2e
-/node_modules
 
 # Compiled output
 /dist
