--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@angular-eslint/template-parser": "14.0.2",
     "@angular/cli": "~14.0.6",
     "@angular/compiler-cli": "^14.0.0",
+    "@schematics/angular": "^14.1.3",
     "@types/jasmine": "~4.0.0",
     "@types/jest": "^28.1.6",
     "@typescript-eslint/eslint-plugin": "5.29.0",
