--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,8 @@
     ],
     "paths": {
       "@app/*": ["app/*"],
+      "@core/*": ["app/core/*"],
+      "@theme/*": ["app/modules/theme/*"],
       "@storage/*": ["app/modules/storage/*"],
       "@env/*": ["environments/*"]
     }
